<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialStereotype</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

<!-- BUTTONS -->
    <string name="playButton">Play Button</string>
    <string name="pauseButton">Pause Button</string>
    <string name="stopButton">Stop Button</string>
    <string name="previousButton">Previous Button</string>
    <string name="nextButton">Next Button</string>
    <string name="shuffleButton">Shuffle Button</string>
    <string name="loopButton">Loop Button</string>
    <string name="optionButton">Option Button</string>
    <string name="volumeDownButton">Volume Down</string>
    <string name="volumeUpButton">Volume Up</string>
    <string name="playlistButton">Refresh Playlist</string>
    <string name="clapButton">Clap</string>
    <string name="bassButton">Bass</string>
    
<!-- MUSIC INTERFACE -->
    <string name="seekTime">seekTime</string>
    <string name="seekTimeDefault">00:00</string>
    <string name="volumeLevel">VolumeLevel</string>
    <string name="playing">Playing</string>
    <string name="playsong">Play Song</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    
<!-- ACTIVITY -->  
    
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="action_Connect">Connect</string>
    <string name="action_Music">Music</string>
    <string name="action_Visual">Visual</string>
    <string name="action_Jockey">Jockey</string>
  
<!-- IP CONNECT-->  
    <string name="label_ip">IP:</string>
    <string name="port">PORT</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="clear">Clear</string>
    <string name="label_myip">My IP:</string>
    <string name="connect_status">connect_status</string>
    <string name="ipAdress">IP ADDESS</string>
    <string name="portInitialValue">50002</string>
    <string name="errors">ERRORS</string>
    <string name="refresh_socket">Show Sock.</string>
    
    <string name="uglyface">Ugly Face</string>
    <string name="ground">The Ground</string>
    <string name="window">Window Frame</string>
    <string name="sun">The Sun</string>
    <string name="troll">The Troll</string>
    <string name="cloud">A Cloud</string>
    

<!--  Google Plus -->
	 <string name="progress_message">Signing in to Google&#8230;</string>
	 <string name="id_open_app_from_gplus">test</string>
	 <string name="desktop_go">desktop_go</string>
<!--  Google Drive -->
	<string name="action_upload_drive">action_upload_drive</string>
</resources>