<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
	    android:id="@+id/connection_status"
        android:showAsAction="always"
        android:icon="@drawable/no_connection" 
        android:enabled="false"/>  
    <item
        android:id="@+id/action_Connect"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_Connect"/>
     
    <item
        android:id="@+id/action_Music"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_Music"/>
    
    <item
        android:id="@+id/action_Visual"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_Visual"/>
    
    <item
        android:id="@+id/action_Jockey"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/action_Jockey"/>
    
</menu>